# ME400_2023

./: .gitmodules  2023-03-24-04-06-36.bag
control/: CMakeLists.txt  package.xml
control/launch/: launch.launch  prev_launch.launch
control/script/: angle_check.py  motor_control.py  temp_relabel.py
hover_control/: CMakeLists.txt  package.xml
hover_control/data/: thrust_new.txt
hover_control/scripts/: PWM_control.py  control_node.py  imu_subscriber.py
hover_launch/: CMakeLists.txt  package.xml
hover_launch/launch/: base_control.launch  imu.launch  imu_filter_madgwick.launch  laser.launch  laser_line.launch
hover_planning/: CMakeLists.txt  package.xml
hover_planning/data/: map.yaml  waypoints.json  waypoints_fast.json  waypoints_right_turn.json  waypoints_with_vel.json
hover_planning/launch/: planning.launch  tmp.launch
hover_planning/scripts/: generate_map.py  generate_robot_tf.py  generate_waypoints.py
imu/: CMakeLists.txt  package.xml
imu/src/: imutest.py
imu_tools/imu_complementary_filter/src/: complementary_filter.cpp  complementary_filter_ros.cpp
laser_line_extraction/launch/: example.launch
laser_line_extraction/rviz/: laser_setting.rviz
laser_line_extraction/src/: line_extraction.cpp
laser_processing/: CMakeLists.txt  package.xml
laser_processing/include/laser_processing/: laser_processing_ros.h
laser_processing/msg/: ControlDebug.msg  Lanes.msg
laser_processing/src/: laser_processing_node.cpp  laser_processing_ros.cpp
loop_gen/: CMakeLists.txt  package.xml
loop_gen/src/: loop_generator.py  loop_generator.py.save
motor_control/: CMakeLists.txt  package.xml
motor_control/src/: control.py
ros-driver_mpu9250/: CMakeLists.txt
ros-driver_mpu9250/src/: calibration.cpp  ros_node.cpp  ros_node.h
